# MatFeaLib

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: requirements.in  requirements.txt
docs/source/: .conf.py.swp  conf.py  index.rst  installation.rst  tutorial.rst
docs/source/api/: matfealib.atomicfeatures.rst  matfealib.compositional.rst  matfealib.plot.rst  matfealib.rst  modules.rst
docs/source/datasets/: CollectionsReference.rst  Matminer.rst  Mendeleev.rst  Pymatgen.rst  dft_hse06.rst  dft_pbe.rst  dft_pbe0.rst  dft_pbesol.rst  dft_pwlda.rst  dft_revpbe.rst  lda2015.rst
docs/source/notebooks/: usage.ipynb
matfealib/: CHANGELOG.md  __init__.py
matfealib/atomicfeatures/: CHANGELOG  __init__.py  atomicfeatures.ipynb  atomicfeatures.py  base.py  db.py  elemental.py  features.py  statistical.py  statistical_features.ipynb  statistical_features_2.ipynb  statistical_features_b.ipynb
matfealib/bulk/: __init__.py  bulk.py
matfealib/compositional/: __init__.py  element_fraction.py  wstatistical.py
matfealib/data/dft_hse06/: README.txt  elemental_features.csv
matfealib/data/dft_hse06_spins/: README.txt  elemental_features.csv
matfealib/data/dft_pbe/: README.txt  elemental_features.csv
matfealib/data/dft_pbe0/: README.txt  elemental_features.csv
matfealib/data/dft_pbe0_spins/: README.txt  elemental_features.csv
matfealib/data/dft_pbe_spins/: README.txt  elemental_features.csv
matfealib/data/dft_pbesol/: README.txt  elemental_features.csv
matfealib/data/dft_pbesol_spins/: README.txt  elemental_features.csv
matfealib/data/dft_pwlda/: README.txt  elemental_features.csv
matfealib/data/dft_pwlda_spins/: README.txt  elemental_features.csv
matfealib/data/dft_revpbe/: README.txt  elemental_features.csv
matfealib/data/dft_revpbe_spins/: README.txt  elemental_features.csv
matfealib/data/features/: README.txt  elemental_features.csv
matfealib/data/lda2015/: .~lock.LDA2015_features_description.xlsx#  README.txt  (+1 more)
matfealib/plot/: __init__.py  base.py  periodic_table.py
matfealib/utils/: __init__.py  utils.py
(+15 files in other folders)
