[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matfealib"
version = "0.1.0a"
dependencies = [
  "numpy",
  "pandas",
  "scipy>1.9",
  "matplotlib",
  "plotly",
  "kaleido",
]
requires-python = ">=3.8"
authors = [
  {name="MatFeaLib Developers", email="matfealib@gmail.com"},
]
maintainers = [
  {name = "Saeid Abedi", email = "saeidabediy@gmail.com"},
  {name = "Samira Baninajarian", email = "sh.baninajariyan@gmail.com"}
]
description = "MatFeaLib package"
readme = "README.md"
keywords = [
    "Materials Science",
    "Machine Learning", 
    "Descriptor", 
    "Atomic Features", 
    "Statistical Features"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
"matfealib.data" = [
    "*/elemental_features.csv",
    "*/README.txt"
]

[project.urls]
Repository = "https://github.com/MatFeaLib/MatFeaLib"
